1999-11-17    <rpr@rpr.wapit.com>

	* gwlib/wapitlib.c: catched signal interrupts in read

	* gw/bearerbox.c: internal sms box implemented. Still some
	problems when the system wents down

	* gw/boxc.c, gw/smsbox_rew.c: updates

	* gw/smsc_cimd.c: quick hack to connect CIMD 1.37. Partial. MG,
	fix this.

1999-11-17    <rpr@rpr.wapit.com>

	* smsbox_req.c: added username 'default', which is used, if no
	username is specified in 'sendsms' http-request

	* smsbox.smsconf: documentation updated accordingly

Tue Nov 16 17:32:34 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/csdr.c: Fixed bug that prevented client address from being
	queryed. (Server address still isn't set correctly.)

1999-11-16    <rpr@rpr.wapit.com>

	* doc/arch/arch-bearerbox.xml: updated to reflect current version

Tue Nov 16 15:40:59 1999  Lars Wirzenius  <liw@wapit.com>

	* Makefile: Added compilation of test programs.
	
	* test/test_msg.c: Added a call to msg_dump.c.

Tue Nov 16 14:57:55 1999  Lars Wirzenius  <liw@wapit.com>

	* Moved a number of files from smsgateway here.

Tue Nov 16 13:11:13 1999  Lars Wirzenius  <liw@wapit.com>

	* Massive reorganization of the directory tree. Almost all files
	moved to subdirectories. Makefile somewhat rewritten.

1999-11-16    <rpr@rpr.wapit.com>

	* bearerbox.c, boxc.c, smsbox.c, smsbox_req.c, smsbox_rq.h,
	Makefile: Preparing bearerbox for internal SMS Box.

Tue Nov 16 12:21:41 1999  Lars Wirzenius  <liw@wapit.com>

	* Makefile, fakesmsc.c, http.c, wapitlib.h: Solaris support
	modified from patch by Steve Kennedy <steve-wapgateway@gbnet.net>.

1999-11-16    <rpr@rpr.wapit.com>

	* smsbox_req.c, smsbox_reg.h, smsbox.c, Makefile: separated 
	request handling to own module so that it can be used as thread 
	in bearerbox (implemented later)

	* bearerbox.c: someone has messed with print_threads

1999-11-15    <mikael@wapit.com>

	* smsc*.(c|h), *box.c: getting rid of the SMSMessage structure
	and pending_* plus adding better UDH support. However, I'm